static/styles.css
/* ... */
.box{
    border-radius: 4px;
    position: relative;
    width: 300px;
    height: 400px;
    background: rgb(63, 63, 63);
    box-shadow: 0 30px 30px rgba(0,0,0,.5);
}


@media only screen and (max-width:600px) {
    .box{margin-bottom: 25px;}
}   
@media only screen and (min-width:600px) {
    .box{margin-bottom: 25px;}
}

@media only screen and (max-width:600px) {
    .box{width: 345px;}
}
@media only screen and (min-width:576px) {
    .box{width: 200px;}
}
@media only screen and (min-width: 768px) {
    .box{width: 235px;}
}
@media only screen and (min-width: 992px) {
    .box{width: 300px;}
}



.box .imgBx{

    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.box .imgBx img{
    border-radius: 4px;

    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: 0.5s;

}

.box:hover .imgBx img{
    opacity: 0;
}

.box .content{
    border-radius: 4px;

    position: absolute;
    bottom: 20px;
    left: 10%;
    width: 80%;
    height: 60px;
    background: rgb(51, 51, 51);
    transition: 0.5s;
    overflow: hidden;
    padding: 15px;
    box-sizing: border-box;
}

.box:hover .content{
    width: 100%;
    height: 100%;
    bottom: 0;
    left: 0;
    overflow: auto;

}

.box .content h3{
    margin: 0;
    padding: 0;
    font-size: 20px;

}
.box .content p{
    margin: 10px 0 0;
    padding: 0;
    opacity: 0;
    line-height: 1.2em;
    transition: 0.5s;
    /* text-align: justify; */
}

.box:hover .content p{
    opacity: 1;
    transition-delay: 0.5s;
}



  /* OLD PACKAGES STYLE */
  
 #coming_soon_packages{color: rgb(248, 142, 55);}
 @media only screen and (max-width:600px) {
    #coming_soon_packages{font-size: 15px;}
 }
  #packages_section{margin-top: 100px;
    background-color: rgb(51, 51, 51);
    padding-bottom: 25px;
}
  #packages{margin-top: 50px;}

  
  @media only screen and (max-width:600px) {
    #packages_header{font-size: 3rem;}
  }
  
  @media only screen and (max-width:600px) {
    .package_title{font-size: 10px;}
    #custom_pckg_header{font-size: 14px;}
  }
  
  .details_span{color: rgb(58, 161, 161);  font-style: italic;}

  #customize_pckgs{
      margin-top: 15px;
      background-color: rgb(51, 51, 51, 0.5);
      border-radius: 5px;
  }


  .package_text{
      color: azure;
  }

 .pckg_detes{
     margin-top: 5px;
      color: rgb(58, 161, 161);
      font-style: italic;
  }
  .pckg_detes_hr{
      margin-top: 2px;
  }

  

  /*  */
 

  /* ABOUT SECTION */
  
  #about{margin-top: 150px;
    background-color: rgb(51, 51, 51);
}
  @media only screen and (max-width:600px) {
    #about_text h1{font-size: 3rem;}
  }
  
  #img_logo{width: 12%; border-radius: 4px;}
  @media only screen and (max-width:600px) {
    #img_logo{width: 25%;}
  }
  
  #logo_block{background-color: rgb(0, 255, 255);
    border-radius: 3px;
}
  .display-2{color: rgb(248, 142, 55); margin-bottom: 25px;}
  #about_text{color: aliceblue;}
  #pa_about{color: rgb(248, 142, 55); margin-top: 15px;}
  @media only screen and (max-width:600px) {
    #pa_about{font-size: 1rem;}
  }
  
  #about_paragraph{margin-top: 20px; margin-bottom: 100px;}
  #w{color: rgb(0, 255, 255);}
  #paft{color: rgb(248, 142, 55);}
  #constitution_link{color: rgb(185, 187, 189); font-weight: bold;}
  #party{color: rgb(248, 142, 55); font-style: italic;}
  
  #about_link{color: rgb(248, 142, 55); font-style: italic; font-weight: bold;}
  /*  */


  /* MORE ABOUT US SECTION */

.card{
    
    border-style: solid hidden solid hidden;
    border-color: rgb(248, 142, 55) rgb(51, 51, 51) rgb(248, 142, 55) rgb(51, 51, 51);}
.card-header button{
    color: rgb(0, 255, 255);
    font-style: italic;
    
}
.card-header button:hover{
    color: rgb(41, 190, 190)
}

.card-header{background-color: rgb(51, 51, 51);}

/* MORE ABOUT FADE IN */
#about{
    color: rgb(51, 51, 51);
}

.card-body{
    background-color: rgb(51, 51, 51);
}
.card-body p{background-color: rgb(51, 51, 51);
    animation: fadeIn ease 5s;
    -webkit-animation: fadeIn ease 5s;
    -moz-animation: fadeIn ease 5s;
    -o-animation: fadeIn ease 5s;
    -ms-animation: fadeIn ease 5s;
}

@keyframes fadeIn {
    0% {
   
      opacity:0;
    }
    100% {
      opacity:1;
    }
  }
  
  @-moz-keyframes fadeIn {
    0% {

      opacity:0;
    }
    100% {
      opacity:1;
    }
  }
  
  @-webkit-keyframes fadeIn {
    0% {

      opacity:0;
    }
    100% {
      opacity:1;
    }
  }
  
  @-o-keyframes fadeIn {
    0% {

      opacity:0;
    }
    100% {
      opacity:1;
    }
  }
  
  @-ms-keyframes fadeIn {
    0% {
 
      opacity:0;
    }
    100% {
      opacity:1;
  }
}


/*  */




.about_p{color: azure;}
  
.card-body span{color: rgb(248, 142, 55);}

#p{font-weight: bold;}

#co_name{color:rgb(252, 134, 38);
        text-decoration: underline;
        text-decoration-color: rgb(41, 190, 190);
}

.four_keys{color:rgb(252, 134, 38) ;
        text-decoration: underline !important;
        text-decoration-color: rgb(41, 190, 190) !important;
        font-weight: bold;
}


.collapsing {
    -webkit-transition-property: height, visibility;
    transition-property: height, visibility;
    -webkit-transition-duration: 1.5s;
    transition-duration: 1.5s;
    -webkit-transition-timing-function: ease;
    transition-timing-function: ease;
  }

/*  */




  hr{background-color: rgb(252, 134, 38);}





  /* CONTACT CARD */
  
  
  #contact{
      margin-top: 10px;
      max-width: 45rem;
      margin-bottom: 50px;
      border-radius: 4px;
      padding-top: 10px;
  }
  
  #contact_me{
    color: rgb(41, 190, 190);;
  }
  @media only screen and (max-width:600px) {
 #contact_me{
      font-size: 18px;
    }
  }
/* ... */

